cluster/argo-workflows/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-server-ingress
  namespace: argo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx    
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: workflows.api.biosimulations.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: argo-server
            port:
              number: 2746
  - host: workflows.biosimulations.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: argo-server
            port:
              number: 2746
  tls:
  - hosts:
    -  workflows.api.biosimulations.org
    - workflows.biosimulations.org
    secretName: argo-workflow-ingress-secret
